--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
 <!-- 
                     <a href="https://maps.app.goo.gl/cU6qTChnv1cv17Qz6" target="_blank"><img src="assets/img/movil-app.png" alt="" ></a> -->
-                    <iframe class="app__img" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3430.053836632135!2d76.69951027485128!3d30.716886874591914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fee5979af8be9%3A0xfd1fff808e892271!2sAccurate%20Graphics!5e0!3m2!1sen!2sin!4v1706267378503!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="app__img" src="https://g.page/r/CV_ZvbCAI7KREAI/review" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
 
