--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         </div>
                     </div>
 <!-- 
-                    <a href="https://maps.app.goo.gl/cU6qTChnv1cv17Qz6" target="_blank"><img src="assets/img/movil-app.png" alt="" ></a> -->
+                    <a href="https://g.page/r/CV_ZvbCAI7KREAI/review" target="_blank"><img src="assets/img/movil-app.png" alt="" ></a> -->
                     <iframe class="app__img" src="https://g.page/r/CV_ZvbCAI7KREAI/review" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
