--- a/index.html
+++ b/index.html
@@ -109,13 +109,11 @@
                             <br> <b>Timings: 9:30 AM to 6:30 PM </b>
                         </p>
                         <div class="app__stores">
-                            <a href="https://www.google.com/search?hl=en-IN&gl=in&q=Accurate+Graphics,+E-93,+Phase+7,+Industrial+Area,+Sector+73,+Sahibzada+Ajit+Singh+Nagar,+Punjab+160055&ludocid=18239577943486046833&lsig=AB86z5WJMLqYvMn3DaLVwcqy9Tg4#lrd=0x390fee5979af8be9:0xfd1fff808e892271,3" target="_blank"><img src="assets/img/app2.png" alt="" class="app__store"></a>
+                            <a href="https://g.page/r/CV_ZvbCAI7KREAI/review" target="_blank"><img src="assets/img/app2.png" alt="" class="app__store"></a>
                         </div>
                     </div>
-<!-- 
-                    <a href="https://g.page/r/CV_ZvbCAI7KREAI/review" target="_blank"><img src="assets/img/movil-app.png" alt="" ></a> -->
-<!--                     <iframe class="app__img" src="https://g.page/r/CV_ZvbCAI7KREAI/review" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div> -->
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3430.0547041085842!2d76.69960787514891!3d30.7168624864002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390fef98365635ab%3A0x91b22380b0bdd95f!2sAccurate%20graphics!5e0!3m2!1sen!2sin!4v1721545917650!5m2!1sen!2sin" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div> 
             </section>
 
             <!--========== CONTACT US ==========-->
