--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                         <li class="nav__item"><a href="#services" class="nav__link">Services</a></li>
                         <li class="nav__item"><a href="#app" class="nav__link">Location</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact us</a></li>
+                        <li class="nav__item"><a href="https://g.page/r/CV_ZvbCAI7KREAI/review" class="nav__link">Rate us!</a></li>
 
                         <li><i class='bx bx-moon change-theme' id="theme-button"></i></li>
                     </ul>
@@ -161,7 +162,7 @@
                 </div>
             </div>
 
-            <p class="footer__copy">&#169; 2024 <a href="https://harshgitdeep.netlify.app/" target="_blank">harshgitdeep.</a> All right reserved</p>
+            <p class="footer__copy">&#169; 2024 <a href="https://harshdeep-singh-portfolio.netlify.app/" target="_blank">harshgitdeep.</a> All right reserved</p>
         </footer>
 
         <!--========== SCROLL REVEAL ==========-->
